--- a/config/craigslist/train_bc.yaml
+++ b/config/craigslist/train_bc.yaml
@@ -2,19 +2,14 @@ defaults:
   - model: bc_lm
   - dataset@train_dataset: list_train
   - dataset@eval_dataset: list_val
-  - evaluator: bc_evaluator
+  - evaluator: bc_generation_evaluator
   - _self_
 
 train_dataset:
   cache_id: d_train
-  data:
-    reward_cache:
-    mode: agent_stops
 
 eval_dataset:
   cache_id: d_eval
-  data:
-    mode: agent_stops
 
 model:
   transition_weight: 0.0
@@ -26,18 +21,11 @@ model:
     strict_load: true
 
 evaluator:
-  env:
-    env:
-    url: http://localhost:5000/step_rank
-    actor_stop: false
-    dataset:
-      name: craigslist_list_dataset
-      cache_id: d_eval
-  verbose: true
+  data:
+    name: craigslist_list_dataset
+    cache_id: d_eval
   kind: sample
-  generation_kwargs:
-    num_generations: 1
-    max_generation_len: 40
+  generation_kwargs: {}
 
 train:
   save_checkpoint_dir: outputs/craigslist/craigslist_bc_test1/
@@ -45,12 +33,12 @@ train:
   epochs: 10000000
   dataloader_workers: 1
   bsize: 2
-  grad_accum_steps: 128
+  grad_accum_steps: 8
   log_every: 256
-  eval_every: 4096
+  eval_every: 1024
   save_every: 16384
   max_checkpoints: 1
-  eval_bsize: 32
+  eval_bsize: 2
   eval_batches: 1
   lr: 1e-4
   weight_decay: 0.00
@@ -58,5 +46,5 @@ train:
   loss: {}
 
 wandb:
-  use_wandb: true
+  use_wandb: false
   wandb_project: craigslist_bc
