--- a/config/craigslist/eval_policy.yaml
+++ b/config/craigslist/eval_policy.yaml
@@ -1,73 +1,42 @@
 defaults:
-  - model: per_token_iql
+  - model: bc_lm
   - dataset: list_val
-  - evaluator: craigslist_iql_evaluator
+  - evaluator: bc_evaluator
   - _self_
 
 dataset:
   cache_id: d
-  data:
-    mode: env_stops
-    cutoff_rule:
-      name: percentile_cutoff_rule
-      goal_value: 1.0
-      percentile: 0.5
-    yn_reward: -2.0
-    yn_reward_kind: hard
+  agent_role: seller
 
 model:
-  alpha: 0.005
-  gamma: 0.99
-  beta: 0.0
   transition_weight: 0.0
-  clip_weight: null
-  value_max: null
-  value_min: null
-  detach_v: false
-  detach_q: false
-  detach_pi: false
-  double_q: true
-  seperate_policy: true
-  seperate_target: true
-  tau: 0.7
-  exp_weights: true
-  advanced_mlp: false
-  cql_temp: 1.0
-  gpt2:
-    lm_head: true
-    from_pretrained: true
   dataset:
     name: craigslist_list_dataset
     cache_id: d
   load:
-    checkpoint_path: null
+    checkpoint_path: outputs/craigslist/craigslist_seller_bc_test1/model.pkl
     strict_load: true
 
 evaluator:
   env:
-    url: http://localhost:5000/step_rank
-    actor_stop: false
     dataset:
       name: craigslist_list_dataset
       cache_id: d
-    yn_reward: -2.0
-    yn_reward_kind: hard
-  verbose: true
-  kind: beam
-  generation_kwargs:
-    max_generation_len: 40
-    beam_width: 1
-    temp: 1.0
-    top_k: null
-    top_p: null
-    exp_adv: true
-    adv_weight: 8.0
-    adv_clip: null
-    include_logits: true
-    include_adv: true
-    # num_generations: 1
-    # rerank_log_prob_weight: 0.0
-    # rerank_advantage_weight: 1.0
+    policy:
+      name: bc_policy
+      bc_lm:
+        name: bc_lm
+        dataset:
+          name: craigslist_list_dataset
+          cache_id: d
+        transition_weight: 0.0
+        load:
+          name: bc_lm
+          checkpoint_path: outputs/craigslist/craigslist_buyer_bc_test1/model.pkl
+          strict_load: true
+      kind: sample
+      generation_kwargs: {}
+    agent_role: seller
 
 eval:
   dataloader_workers: 1
@@ -76,10 +45,5 @@ eval:
   print_every: 8
   seed: 0
   log_save_path: null
-  loss:
-    v_loss_weight: 1.0
-    q_loss_weight: 1.0
-    awac_weight: 1.0
-    cql_loss_weight: 1.0
-    mc_returns: false
-    
+  loss: {}
+
