--- a/config/craigslist/eval_policy.yaml
+++ b/config/craigslist/eval_policy.yaml
@@ -34,6 +34,11 @@ evaluator:
           name: bc_lm
           checkpoint_path: outputs/craigslist/craigslist_buyer_bc_test1/model.pkl
           strict_load: true
+        gpt2:
+          name: gpt2
+          gpt2_type: gpt2
+          from_pretrained: true
+          lm_head: true
       kind: sample
       generation_kwargs: {}
     agent_role: seller
