--- a/config/craigslist/eval_policy.yaml
+++ b/config/craigslist/eval_policy.yaml
@@ -1,7 +1,9 @@
 defaults:
   - model: bc_lm
+  # - model: per_token_iql
   - dataset: list_val
   - evaluator: bc_evaluator
+  # - evaluator: iql_evaluator
   - _self_
 
 dataset:
@@ -14,8 +16,37 @@ model:
     name: craigslist_list_dataset
     cache_id: d
   load:
-    checkpoint_path: outputs/craigslist/craigslist_seller_bc_test1/model.pkl
+    checkpoint_path: outputs/craigslist/craigslist_seller_10pbc_test1/model.pkl
     strict_load: true
+
+# model:
+#   alpha: 0.005
+#   gamma: 0.99
+#   beta: 0.0
+#   transition_weight: 0.0
+#   clip_weight: null
+#   value_max: null
+#   value_min: null
+#   detach_v: false
+#   detach_q: false
+#   detach_pi: false
+#   double_q: true
+#   seperate_policy: true
+#   seperate_target: true
+#   tau: 0.8
+#   exp_weights: true
+#   dm_margin: 0.0
+#   advanced_mlp: false
+#   cql_temp: 1.0
+#   gpt2:
+#     lm_head: true
+#     from_pretrained: true
+#   dataset:
+#     name: craigslist_list_dataset
+#     cache_id: d
+#   load:
+#     checkpoint_path: outputs/craigslist/craigslist_iql_test1/model_1064959.pkl
+#     strict_load: true
 
 evaluator:
   env:
@@ -40,15 +71,65 @@ evaluator:
           checkpoint_path: outputs/craigslist/craigslist_buyer_bc_test1/model.pkl
           strict_load: true
       kind: sample
-      generation_kwargs: {}
+      generation_kwargs:
+        max_generation_len: 40
     agent_role: seller
+    max_turns: 10
+  kind: beam
+  generation_kwargs:
+    max_generation_len: 40
+    beam_width: 1
+
+# evaluator:
+#   env:
+#     dataset:
+#       name: craigslist_list_dataset
+#       cache_id: d
+#     policy:
+#       name: bc_policy
+#       bc_lm:
+#         name: bc_lm
+#         gpt2:
+#           name: gpt2
+#           gpt2_type: gpt2
+#           from_pretrained: true
+#           lm_head: true
+#         dataset:
+#           name: craigslist_list_dataset
+#           cache_id: d
+#         transition_weight: 0.0
+#         load:
+#           name: bc_lm
+#           checkpoint_path: outputs/craigslist/craigslist_buyer_bc_test1/model.pkl
+#           strict_load: true
+#       kind: sample
+#       generation_kwargs:
+#         max_generation_len: 40
+#     agent_role: seller
+#     max_turns: 10
+#   kind: beam
+#   generation_kwargs:
+#     max_generation_len: 40
+#     beam_width: 1
+#     temp: 1.0
+#     top_k: null
+#     top_p: null
+#     exp_adv: true
+#     adv_weight: 0.0
+#     adv_clip: null
+#     include_logits: true
+#     include_adv: true
+#     optim_probs: false
+#     # num_generations: 1
+#     # rerank_log_prob_weight: 0.0
+#     # rerank_advantage_weight: 1.0
 
 eval:
   dataloader_workers: 1
   bsize: 1
-  batches: 128
+  batches: 1024
   print_every: 8
   seed: 0
-  log_save_path: outputs/craigslist/eval_logs/seller_v_buyer_bc.pkl
+  log_save_path: outputs/craigslist/eval_logs/seller_v_buyer_10pbc_1.pkl
+  # log_save_path: null
   loss: {}
-
